--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                     <li class="menu-item">
 
-                        <a href="Project.html" ><span class="menu-sub">Главная</span></a>
+                        <a href="index.html" ><span class="menu-sub">Главная</span></a>
 
                     </li>
 
