--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             </div>
 
-            <button id="moreinfo">Побробнее о Планете!</button>
+            <button id="moreinfo">Подробнее о Планете!</button>
         </div>
 
     </header>
